test for query and browser

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,9 +1,8 @@
 {
     "collectCoverage": true,
     "collectCoverageFrom": [
-        "src/**/*.js",
-        "!src/index.js",
-        "!src/global.js"
+        "src/**/*.js"
     ],
+    "testURL": "https://www.google.it/#!/test.html",
     "coverageReporters": ["lcov", "text", "text-summary"]
 }
