--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-browser",
   "version": "0.1.0",
-  "description": "",
+  "description": "JsBrowser provides you an alternative method to manage previous and current page changements.",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
