--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-browser",
+  "name": "@docomodigital/js-browser",
   "version": "0.1.0",
   "description": "JsBrowser provides you an alternative method to manage previous and current page changements.",
   "main": "dist/index.js",
